0031618: Data Exchange, RWGltf_CafWriter - exporting some models produces glTF files not passing validation

Added a check for non-empty mesh and new warning
that notifies about skipping an empty node